--- a/frontend/styles/HomeTweet.module.css
+++ b/frontend/styles/HomeTweet.module.css
@@ -1,31 +1,114 @@
 .container{
-    display: flex;
-}
+     display: grid;
+    width: 100vw;
+    height: 100vh;
+    grid-template-rows: repeat(12, 1fr);
+    grid-template-columns: repeat(12, 1fr);
+    background-color: #151d26;
+      }
 
 .leftContainer{
+    grid-row-start: 1;
+    grid-row-end: 13;
+    grid-column-start: 1;
+    grid-column-end: 3;
     color:white;
     background-color: #151D26;
     display : flex;
     flex-direction: column;
     justify-content: space-between;
-    height: 100vh;
 }
 
-.centerContainer{
+.home{
     background-color: #151D26;
-    height: 100vh;
+    color : white;
+    grid-row-start: 1;
+    grid-row-end: 4;
+    grid-column-start: 3;
+    grid-column-end: 10;
+    border-left: white solid 1px;
+    border-right: white solid 1px;
+    border-bottom: white solid 1px;
+    display: flex;
+    flex-direction: column;
+    padding-top: 1.5vw;
+    padding-left: 1.5vw;
+}
+
+.tweetsContainer{
+    background-color: #151D26;
+    grid-row-start: 4;
+    grid-row-end: 13;
+    grid-column-start: 3;
+    grid-column-end: 10;
+    border-left: white solid 1px;
+    border-right: white solid 1px;
 }
 
 .rightContainer{
     background-color: #151D26;
-    height: 100vh;
+    color:white;
+    grid-row-start: 1;
+    grid-row-end: 13;
+    grid-column-start: 10;
+    grid-column-end: 13;
+    padding-top: 1.5vw;
+    padding-left: 1.5vw;
 }
 
 .user{
     display: flex;
+    align-items: center;
+    margin-left: 10px;
+    margin-bottom: 10px;
 }
 
 .username{
     display: flex;
     flex-direction: column;
 }
+
+.buttonTweet {
+    border-radius: 25px;
+    width: 80px;
+    height: 30px;
+    border: none;
+    background-color: #3690ed;
+    color: white;
+    font-weight: 750;
+    margin:5px;
+  }
+
+  .validation{
+    display: flex;
+    justify-content: right;
+    align-items: center;
+  }
+
+  .tweetwriting{
+    background-color: #151D26;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    margin-left:4vw;
+    margin-right: 4vw;
+  }
+
+  .inputTweet{
+    height: 5vh;
+    background-color: #151D26;
+    color : white;
+    margin-top: 10px;
+    margin-bottom: 10px;
+  }
+
+  .trendsContainer{
+    background-color: white;
+    width: 22vw;
+    margin-top: 20px;
+  }
+
+  .logoLeft{
+    margin : 10px;
+  }
+
