--- a/frontend/styles/Trend.module.css
+++ b/frontend/styles/Trend.module.css
@@ -1,3 +1,14 @@
 .container{
+    display: flex;
+    flex-direction: column;
+    align-items: left;
+    background-color: blue;
+}
+
+.title{
     color : white;
+}
+
+.occurence{
+    color : gray;
 }
