--- a/frontend/styles/HomeTweet.module.css
+++ b/frontend/styles/HomeTweet.module.css
@@ -80,6 +80,16 @@
   margin: 5px;
 }
 
+.buttonLogout {
+  border-radius: 25px;
+  width: 150px;
+  height: 40px;
+  border: 2px solid #545f6a;
+  background-color: transparent;
+  color: #3690ed;
+  cursor: pointer;
+}
+
 .validation {
   display: flex;
   justify-content: right;
