--- a/frontend/styles/HomeTweet.module.css
+++ b/frontend/styles/HomeTweet.module.css
@@ -44,6 +44,8 @@
   grid-column-end: 10;
   border-left: #29313b solid 2px;
   border-right: #29313b solid 2px;
+
+  overflow-y: scroll;
 }
 
 .rightContainer {
@@ -145,7 +147,7 @@
   border-radius: 50%;
 }
 
-.bottom{
+.bottom {
   display: flex;
   flex-direction: column;
   align-items: center;
